--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "router": "^1.3.8"
   }
 }
