--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.9.3",
+    "nodemon": "^3.1.9",
     "router": "^1.3.8"
   }
 }
