--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"cd backend && npm start\""
+    "server": "nodemon server.js",
+    "both": "concurrently \"npm run start\" \"cd backend && npm run server\""
   },
   "eslintConfig": {
     "extends": [
